src/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c.object
<CustomObject>
    <description>Represents a single customer enrollment into an incentive loyalty program</description>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account enrolled in the incentive loyalty program</description>
        <inlineHelpText>ID of the associated account enrolled in the incentive loyalty program</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalty Enrollments</relationshipLabel>
        <relationshipName>LoyaltyEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the enrollment is active. Loyalty points are not accumulated for inactive enrollments.</description>
        <inlineHelpText>Indicates whether the enrollment is active. Loyalty points are not accumulated for inactive enrollments.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdditionalPointsForNextLevel__c</fullName>
        <description>The additional loyalty points required to reach the next loyalty level</description>
        <inlineHelpText>The additional loyalty points required to reach the next loyalty level</inlineHelpText>
        <label>Additional Points For Next Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdditionalPointsToKeepLevel__c</fullName>
        <description>The additional loyalty points required to maintain the current loyalty level</description>
        <inlineHelpText>The additional loyalty points required to maintain the current loyalty level</inlineHelpText>
        <label>Additional Points To Keep Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the contact enrolled in the incentive loyalty program</description>
        <inlineHelpText>ID of the contact enrolled in the incentive loyalty program</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loyalty Enrollments</relationshipLabel>
        <relationshipName>LoyaltyEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomerType__c</fullName>
        <description>The customer type</description>
        <inlineHelpText>The customer type</inlineHelpText>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EligibilityStartDate__c</fullName>
        <description>The date when the member becomes eligible</description>
        <inlineHelpText>The date when the member becomes eligible</inlineHelpText>
        <label>Eligibility Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The enrollment end date</description>
        <inlineHelpText>The enrollment end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnrollmentType__c</fullName>
        <description>The enrollment type</description>
        <inlineHelpText>The enrollment type</inlineHelpText>
        <label>Point Accrual Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <description>ID of the associated incentive loyalty program</description>
        <inlineHelpText>ID of the associated incentive loyalty program</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Loyalty Enrollments</relationshipLabel>
        <relationshipName>LoyaltyEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastProcessedOrderDate__c</fullName>
        <description>The last order date processed for loyalty point accrual</description>
        <inlineHelpText>The last order date processed for loyalty point accrual</inlineHelpText>
        <label>Last Processed Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastProcessedOrderNumber__c</fullName>
        <description>The last order number processed for loyalty point accrual</description>
        <inlineHelpText>The last order number processed for loyalty point accrual</inlineHelpText>
        <label>Last Processed Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LifetimePoints__c</fullName>
        <description>The lifetime loyalty points accrued for the account or contact since enrollment</description>
        <inlineHelpText>The lifetime loyalty points accrued for the account or contact since enrollment</inlineHelpText>
        <label>Lifetime Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevelEarned__c</fullName>
        <description>The loyalty level earned by the account/contact or custom point accrual level based on points accrued for the incentive</description>
        <inlineHelpText>The loyalty level earned by the account/contact or custom point accrual level based on points accrued for the incentive</inlineHelpText>
        <label>Loyalty Level (Earned)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevelInitial__c</fullName>
        <description>The loyalty level granted to the account/contact or custom point accrual level from the previous cycle. This level becomes the starting level for the new cycle unless an override is in effect.</description>
        <inlineHelpText>The loyalty level granted to the account/contact or custom point accrual level from the previous cycle. This level becomes the starting level for the new cycle unless an override is in effect.</inlineHelpText>
        <label>Loyalty Level (Initial)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevelOverride__c</fullName>
        <description>The loyalty level override granted to the account/contact or custom point accrual level</description>
        <inlineHelpText>The loyalty level override granted to the account/contact or custom point accrual level</inlineHelpText>
        <label>Loyalty Level (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevel__c</fullName>
        <description>The loyalty level granted to the account/contact based on points accrued for the incentive</description>
        <inlineHelpText>The loyalty level granted to the account/contact based on points accrued for the incentive</inlineHelpText>
        <label>Loyalty Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OverrideDate__c</fullName>
        <description>The date the loyalty level was overridden</description>
        <inlineHelpText>The date the loyalty level was overridden</inlineHelpText>
        <label>Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OverrideReason__c</fullName>
        <description>The reason for the loyalty level override</description>
        <inlineHelpText>The reason for the loyalty level override</inlineHelpText>
        <label>Override Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Points__c</fullName>
        <description>The loyalty points accrued for the account or contact</description>
        <inlineHelpText>The loyalty points accrued for the account or contact</inlineHelpText>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The enrollment start date</description>
        <inlineHelpText>The enrollment start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TermsAndConditionsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether loyalty program terms and conditions are accepted by the customer</description>
        <inlineHelpText>Indicates whether loyalty program terms and conditions are accepted by the customer</inlineHelpText>
        <label>Terms And Conditions Accepted</label>
        <type>Checkbox</type>
    </fields>
    <label>Incentive Loyalty Enrollment</label>
    <nameField>
        <displayFormat>LE-{00000000}</displayFormat>
        <label>Enrollment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Loyalty Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>